LimitedByteArrayOutputStream, TeeOutputStream, TempDirs removed, InputStreams moved, prepared version 0.0.24